@@ -2,6 +2,7 @@ Process Hacker
 
 2.2
  * NEW/IMPROVED:
+   * Tasks are shown in tooltips for taskeng.exe/taskhost.exe processes
    * Run As can now start processes elevated
  * FIXED:
    * Run and Run As shortcuts
